force-app/main/default/objects/User/fields/CEOName__c.field-meta.xml
<CustomField>
    <fullName>CEOName__c</fullName>
    <label>CEO Name (If required)</label>
    <relationshipName>CEO_Name</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>