force-app/main/default/objects/User/fields/DirectorName__c.field-meta.xml
<CustomField>
    <fullName>DirectorName__c</fullName>
    <label>Director Name</label>
    <relationshipName>Director</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>