force-app/main/default/objects/User/fields/Employee_Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_Ext_ID__c</fullName>
    <defaultValue>&quot;admin&quot;</defaultValue>
    <description>Employee id of ananda/helix</description>
    <externalId>true</externalId>
    <label>Employee ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>