force-app/main/default/objects/User/fields/HOBSVP__c.field-meta.xml
<CustomField>
    <fullName>HOBSVP__c</fullName>
    <label>HOB/SVP Name</label>
    <relationshipName>HOBSVP</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>