force-app/main/default/objects/User/fields/Language_Skills__c.field-meta.xml
<CustomField>
    <fullName>Language_Skills__c</fullName>
    <label>Language Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Thai</fullName>
                <default>true</default>
                <label>Thai</label>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>