force-app/main/default/objects/User/fields/ManagerName__c.field-meta.xml
<CustomField>
    <fullName>ManagerName__c</fullName>
    <label>Manager Name</label>
    <relationshipName>Manager</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>