force-app/main/default/objects/User/fields/MDCCO__c.field-meta.xml
<CustomField>
    <fullName>MDCCO__c</fullName>
    <label>MD/CCO Name</label>
    <relationshipName>MDCCO</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>