force-app/main/default/objects/User/fields/No_of_campaign_approval_steps__c.field-meta.xml
<CustomField>
    <fullName>No_of_campaign_approval_steps__c</fullName>
    <label>No. of campaign approval steps</label>
    <length>2</length>
    <type>Text</type>
</CustomField>