force-app/main/default/objects/User/listViews/User_Helix.listView-meta.xml
<ListView>
    <fullName>User_Helix</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.COMPANY_NAME</field>
        <operation>equals</operation>
        <value>Helix</value>
    </filters>
    <label>User Helix</label>
    <language>en_US</language>
</ListView>